# pascal-rust

./: .env  Cargo.toml  justfile
benches/: bench.pas  bench.sh  my_benchmark.rs
examples/: comp.pas  comp2.pas  factorial.pas
lib/: error.asm  std.error.asm  std.io.asm
src/: builtins.rs  compiler.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic_analyzer.rs  symbols.rs  tokens.rs  utils.rs
test_cases/compiler/: test_array.pas  test_array_out_of_bounds_error1.pas  test_array_out_of_bounds_error2.pas  test_array_out_of_bounds_error3.pas  test_array_out_of_bounds_error4.pas  test_booleans.pas  test_div0_error.pas  test_expressions.pas  test_functions.pas  test_if.pas  test_loops.pas  test_out.pas  test_recursive.pas  test_simple_math.pas  test_simple_print.pas  test_type_casting.pas
test_cases/interpreter/: test_div_zero_fail.pas  test_inp.pas  test_print.pas  test_range.pas  test_range_bound_fail.pas
test_cases/parser/: test_array_decl  test_array_decl.pas  test_binary  test_binary.pas  test_callable_decls  test_callable_decls.pas  test_decls  test_decls.pas  test_empty_program  test_empty_program.pas  test_enum  test_enum.pas  test_for_loop  test_for_loop.pas  test_if_stmt  test_if_stmt.pas  test_range  test_range.pas  test_string  test_string.pas  test_types  test_types.pas  test_while_loop  test_while_loop.pas
test_cases/semantic_analyzer/: test_already_defined_fail.pas  test_array.pas  test_assign_fail.pas  test_assign_to_const.pas  test_base.pas  test_bin_op_fail.pas  test_bin_op_integral.pas  test_boolean_condition_fail.pas  (+13 more)
