[package]
name = "pascal-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["cargo"] }
err_code = "0.1.0"
itertools = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
test-strategy = "0.4.4"
proptest = "1.10.0"
regex = "1.12.3"

[[bench]]
name = "my_benchmark"
harness = false
